objects/Master_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Offer_Description__c</fullName>
        <description>Quote Integration: Offer Description based on EDW and CCW</description>
        <label>Offer Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <description>Quote Integration: Part Number from EDW and CCW</description>
        <externalId>true</externalId>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Offer__c</fullName>
        <description>Quote Integration: Indicate if Offer is Recurring or not</description>
        <label>Recurring Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Quote Integration: Indicate Source of Data EDW or CCW</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <description>Quote Integration: Indicate Offer Term type</description>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ON-PREMISE OFFER</fullName>
                </value>
                <value>
                    <fullName>XAAS</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Quote Integration: Indicate if Offer should be shown to user or not</description>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <description>Quote Integration: List of Master Offers list comprise of CCW and EDW offers</description>
    <label>Master Offer</label>
    <nameField>
        <label>Offer Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Offer_Description__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Recurring_Offer__c</columns>
        <columns>Source__c</columns>
        <columns>Term_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>